--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-carousel-mui": "^1.0.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-loading-icons": "^1.1.0",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
